--- a/lstm-spam-api/notebooks/Convert Dataset into Vectors, Split & Export.ipynb
+++ b/lstm-spam-api/notebooks/Convert Dataset into Vectors, Split & Export.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,10 @@
     "\n",
     "EXPORT_DIR = DATASET_DIR / \"exports\"\n",
     "EXPORT_DIR.mkdir(exist_ok=True, parents=True)\n",
-    "SPAM_DATASET_PATH = EXPORT_DIR / \"spam-dataset.csv\""
+    "SPAM_DATASET_PATH = EXPORT_DIR / \"spam-dataset.csv\"\n",
+    "\n",
+    "METADATA_EXPORT_PATH = EXPORT_DIR / \"spam-metadata.pkl\"\n",
+    "TOKENIZER_EXPORT_PATH = EXPORT_DIR / \"spam-tokenizer.json\""
    ]
   },
   {
@@ -120,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +137,7 @@
        "  \"Nah I don't think he goes to usf, he lives around here though\"])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -3443,7 +3446,7 @@
        " ...]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3459,7 +3462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -4468,7 +4471,7 @@
        " ...}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4480,7 +4483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -4489,7 +4492,7 @@
        "(7528, 300)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4503,7 +4506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -4512,7 +4515,7 @@
        "array([0, 0, 1, ..., 1, 1, 0])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4525,7 +4528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -4540,7 +4543,7 @@
        "       [1., 0.]])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4552,10 +4555,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1090335"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "training_data = {   \n",
+    "    'X_train': X_train,\n",
+    "    'X_test': X_test,\n",
+    "    'y_train': y_train,\n",
+    "    'y_test': y_test,\n",
+    "    \"max_words\" : MAX_NUM_WORDS,\n",
+    "    \"max_seq_length\": MAX_SEQ_LENGTH,\n",
+    "    \"label_legend\": label_legend,\n",
+    "    \"label_legend_inverted\": label_legend_inverted\n",
+    "}\n",
+    "\n",
+    "tokenizer_json = tokenizer.to_json()\n",
+    "TOKENIZER_EXPORT_PATH.write_text(tokenizer_json)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(METADATA_EXPORT_PATH, 'wb') as f:\n",
+    "    pickle.dump(training_data, f)"
+   ]
   }
  ],
  "metadata": {
