Refactor code to improve performance and readability

--- a/lstm-spam-api/guides/spam-classifier/Convert Dataset into Vectors.ipynb
+++ b/lstm-spam-api/guides/spam-classifier/Convert Dataset into Vectors.ipynb
@@ -6,14 +6,16 @@
    "metadata": {},
    "source": [
     "# Convert Dataset into Vectors\n",
+    "\n",
     "The dataset we'll use combined 2 open source datasets curated by [The University of California, Irvine (UCI)](https://archive.ics.uci.edu). Learn how to [prepare this dataset here](https://github.com/codingforentrepreneurs/AI-Microservice-from-Scratch/blob/main/guides/Prepare%20the%20AI%20Spam%20Classifier%20Dataset.ipynb).\n",
     "\n",
     "#### Requirements\n",
+    "\n",
     "- Python\n",
     "- Jupyter (Setup with [this video](https://www.youtube.com/watch?v=9tPS-7TWjq0))\n",
     "- Pandas\n",
     "- `scikit-learn` (aka `sklearn`)\n",
-    "- Tensorflow"
+    "- Tensorflow\n"
    ]
   },
   {
@@ -21,12 +23,12 @@
    "id": "14f79271",
    "metadata": {},
    "source": [
-    "### Step 1: Load Dataset"
+    "### Step 1: Load Dataset\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "4add4a0c",
    "metadata": {},
    "outputs": [],
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "5dd5a8ff",
    "metadata": {},
    "outputs": [
@@ -46,7 +48,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BASE_DIR is /Users/cfe/Dev/ai-as-an-api\n"
+      "BASE_DIR is /Users/edkwang/Google Drive/Code/projects/public/machine-learning/lstm-spam-api\n"
      ]
     }
    ],
@@ -120,6 +122,7 @@
        "      <th>label</th>\n",
        "      <th>text</th>\n",
        "      <th>source</th>\n",
+       "      <th>raw_source</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -127,43 +130,55 @@
        "      <th>0</th>\n",
        "      <td>ham</td>\n",
        "      <td>Go until jurong point, crazy.. Available only ...</td>\n",
-       "      <td>uci-spam-sms</td>\n",
+       "      <td>sms=spam</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>ham</td>\n",
        "      <td>Ok lar... Joking wif u oni...</td>\n",
-       "      <td>uci-spam-sms</td>\n",
+       "      <td>sms=spam</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>spam</td>\n",
        "      <td>Free entry in 2 a wkly comp to win FA Cup fina...</td>\n",
-       "      <td>uci-spam-sms</td>\n",
+       "      <td>sms=spam</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>ham</td>\n",
        "      <td>U dun say so early hor... U c already then say...</td>\n",
-       "      <td>uci-spam-sms</td>\n",
+       "      <td>sms=spam</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>ham</td>\n",
        "      <td>Nah I don't think he goes to usf, he lives aro...</td>\n",
-       "      <td>uci-spam-sms</td>\n",
+       "      <td>sms=spam</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  label                                               text        source\n",
-       "0   ham  Go until jurong point, crazy.. Available only ...  uci-spam-sms\n",
-       "1   ham                      Ok lar... Joking wif u oni...  uci-spam-sms\n",
-       "2  spam  Free entry in 2 a wkly comp to win FA Cup fina...  uci-spam-sms\n",
-       "3   ham  U dun say so early hor... U c already then say...  uci-spam-sms\n",
-       "4   ham  Nah I don't think he goes to usf, he lives aro...  uci-spam-sms"
+       "  label                                               text    source  \\\n",
+       "0   ham  Go until jurong point, crazy.. Available only ...  sms=spam   \n",
+       "1   ham                      Ok lar... Joking wif u oni...  sms=spam   \n",
+       "2  spam  Free entry in 2 a wkly comp to win FA Cup fina...  sms=spam   \n",
+       "3   ham  U dun say so early hor... U c already then say...  sms=spam   \n",
+       "4   ham  Nah I don't think he goes to usf, he lives aro...  sms=spam   \n",
+       "\n",
+       "  raw_source  \n",
+       "0        NaN  \n",
+       "1        NaN  \n",
+       "2        NaN  \n",
+       "3        NaN  \n",
+       "4        NaN  "
       ]
      },
      "execution_count": 5,
@@ -181,7 +196,7 @@
    "id": "bed519da",
    "metadata": {},
    "source": [
-    "### Step 2: Convert Dataset to Lists"
+    "### Step 2: Convert Dataset to Lists\n"
    ]
   },
   {
@@ -200,7 +215,7 @@
    "id": "82205207",
    "metadata": {},
    "source": [
-    "Now we need to map our labels from being text values to being integer values. It's pretty simple:"
+    "Now we need to map our labels from being text values to being integer values. It's pretty simple:\n"
    ]
   },
   {
@@ -226,7 +241,7 @@
     "```python\n",
     "legend = {f\"{x}\": i for i, x in enumerate(list(set(labels)))}\n",
     "legend_inverted = {f\"{v}\":k for k,v in legend.items()}\n",
-    "```"
+    "```\n"
    ]
   },
   {
@@ -244,9 +259,9 @@
    "id": "009a8cae",
    "metadata": {},
    "source": [
-    "__Verify the indices__\n",
+    "**Verify the indices**\n",
     "\n",
-    "It's important that our indices are still correct since this is the data we'll be using to train our model."
+    "It's important that our indices are still correct since this is the data we'll be using to train our model.\n"
    ]
   },
   {
@@ -259,7 +274,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Index 1403\n"
+      "Random Index 869\n"
      ]
     }
    ],
@@ -288,7 +303,7 @@
    "source": [
     "### Step 3: Tokenize Texts\n",
     "\n",
-    "The Keras Tokenizer will convert our raw text into vectors. Converting texts to vectors is a required step for any machine learning model (not just keras)."
+    "The Keras Tokenizer will convert our raw text into vectors. Converting texts to vectors is a required step for any machine learning model (not just keras).\n"
    ]
   },
   {
@@ -316,7 +331,7 @@
    "id": "66b48b54",
    "metadata": {},
    "source": [
-    "> `MAX_NUM_WORDS` is set to the current max length of any given post (tweet) on Twitter. This max number of words is likely to exceed *all* of our sms text size (typically 160 characters)."
+    "> `MAX_NUM_WORDS` is set to the current max length of any given post (tweet) on Twitter. This max number of words is likely to exceed _all_ of our sms text size (typically 160 characters).\n"
    ]
   },
   {
@@ -329,7 +344,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 9538 unique tokens.\n"
+      "Found 12077 unique tokens.\n"
      ]
     }
    ],
@@ -358,19 +373,20 @@
    "source": [
     "### Step 4: Create `X`, `y` training sets\n",
     "\n",
-    "In machine learning, it's common to denote the training inputs as `X` and their corresponding labels (the outputs) as `y`. \n",
+    "In machine learning, it's common to denote the training inputs as `X` and their corresponding labels (the outputs) as `y`.\n",
     "\n",
-    "Let's start with the `X` data (aka the text) by padding all of our tokenized sequences. This ensures all training inputs are the same shape (aka size). \n",
+    "Let's start with the `X` data (aka the text) by padding all of our tokenized sequences. This ensures all training inputs are the same shape (aka size).\n",
     "\n",
-    "Each sentence in each paragraph in every conversation you have is rarely the same length. It is almost certainly *sometimes* the same length, but rarely all the time. With that in mind, we want to categorize every sentence (or paragraph) as either `spam` or `ham` -- an arbitrary length of data into known length of data. \n",
+    "Each sentence in each paragraph in every conversation you have is rarely the same length. It is almost certainly _sometimes_ the same length, but rarely all the time. With that in mind, we want to categorize every sentence (or paragraph) as either `spam` or `ham` -- an arbitrary length of data into known length of data.\n",
     "\n",
     "This means we have two challenges:\n",
+    "\n",
     "- Matrix multiplication has strict rules\n",
     "- Spoken or written language rarely adheres to strict rules.\n",
     "\n",
     "What to do?\n",
     "\n",
-    "`X` as new representation for the `text` from our raw dataset. As stated above, there's a very small chance that all data in this group is the exact same length so we'll use the built-in tool called `pad_sequences` to correct for the inconsistent length. This length is actually called shape because of it's roots in linear algebra (matrix multiplication)."
+    "`X` as new representation for the `text` from our raw dataset. As stated above, there's a very small chance that all data in this group is the exact same length so we'll use the built-in tool called `pad_sequences` to correct for the inconsistent length. This length is actually called shape because of it's roots in linear algebra (matrix multiplication).\n"
    ]
   },
   {
@@ -392,7 +408,7 @@
    "id": "d4dd8f32",
    "metadata": {},
    "source": [
-    "Now we covert our `labels_as_int` into a corresponding matrix value (instead of just a list of ints) by using the built-in `to_categorical` function. The number of labels does not have to be 2 (as we have) but it should be at least 2."
+    "Now we covert our `labels_as_int` into a corresponding matrix value (instead of just a list of ints) by using the built-in `to_categorical` function. The number of labels does not have to be 2 (as we have) but it should be at least 2.\n"
    ]
   },
   {
@@ -415,11 +431,11 @@
    "source": [
     "### Step 5: Split our Training Data\n",
     "\n",
-    "If we trained on all of our data, our model will fit very *well* to that training data but it will not perform well on new data; aka it will be mostly useless.\n",
+    "If we trained on all of our data, our model will fit very _well_ to that training data but it will not perform well on new data; aka it will be mostly useless.\n",
     "\n",
     "Since we have the `X` and `y` designations, we split the data into at least 2 corresponding sets: training data and validation data for each designation resulting in `X_train`, `X_test`, `y_train`, `y_test`.\n",
     "\n",
-    "An easy way (but not the only way) is to use `scikit-learn` for this:"
+    "An easy way (but not the only way) is to use `scikit-learn` for this:\n"
    ]
   },
   {
@@ -439,7 +455,7 @@
    "id": "969df478",
    "metadata": {},
    "source": [
-    "As we'll see soon, the test sets (aka `X_test` and `y_test`) are used to evaluate how our AI model is learning (aka the performance). This means it's often a good idea to save the test sets for future training and not splitting the data all over again. Using the same test set over and over will show how our model is performing over time."
+    "As we'll see soon, the test sets (aka `X_test` and `y_test`) are used to evaluate how our AI model is learning (aka the performance). This means it's often a good idea to save the test sets for future training and not splitting the data all over again. Using the same test set over and over will show how our model is performing over time.\n"
    ]
   },
   {
@@ -449,7 +465,7 @@
    "source": [
     "### Step 6: Export our Training Data\n",
     "\n",
-    "For this step, we'll use Python's built-in `pickle` module. Pickle is *not secure* so only open pickles that you create yourself. I am doing it as a way to pass data between jupyter notebooks."
+    "For this step, we'll use Python's built-in `pickle` module. Pickle is _not secure_ so only open pickles that you create yourself. I am doing it as a way to pass data between jupyter notebooks.\n"
    ]
   },
   {
@@ -523,7 +539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
